--- a/css/activity.css
+++ b/css/activity.css
@@ -9,9 +9,7 @@ the Free Software Foundation, either version 3 of the License, or
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
+GNU General Public License for more details.You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
@@ -20,7 +18,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 }
 
 body {
-  background-color: #99CCFF;
   padding: 0;
   margin: 0;
   font-family: sans;
@@ -88,7 +85,6 @@ input.number {
   overflow: hidden;
   z-index: 10;
 
-  background: #99CCFF;
 }
 
 .canvasHolder.hide canvas {
@@ -102,7 +98,6 @@ nav {
   left: 0px;
   z-index: 100;
 
-  background-color: #8bc34a;
   height: 64px;
   width: 100%;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
@@ -234,3 +229,17 @@ img.icon:hover {
 img.icon:hover {
   background-color: rgba(139, 195, 74, 0.8);
 }
+
+/*THREE.js Containers */
+
+#scriptingOutput{
+  position: absolute;
+  z-index: 20;
+}
+
+#turtleOutput{
+  position: absolute;
+  z-index: 0;
+}
+
+
