Ported palette and activity, fixed bugs in utils and trash

--- a/css/activity.css
+++ b/css/activity.css
@@ -53,7 +53,7 @@ input.number {
   float: right;
   position: absolute;
   margin-top: 57px;
-  z-index: -1;
+  pointer-events: none;
 }
 
 #canvas {
